[gd_scene load_steps=9 format=3 uid="uid://choo70jhtdlqq"]

[ext_resource type="PackedScene" uid="uid://cq4u1lqr4ssdp" path="res://glTF format/ship_light.gltf" id="1_w54a4"]
[ext_resource type="Script" path="res://char/enemy.gd" id="2_fuutl"]
[ext_resource type="AudioStream" uid="uid://b6kopaqliqj57" path="res://assets/sound/contact_hit.wav" id="3_4a8ps"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ymdiw"]

[sub_resource type="Animation" id="Animation_0loj4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath("ship_light_8angles:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.06667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.715098, 2.14769e-14, 0.0144567), Vector3(-0.715098, 2.14769e-14, 0.0144567)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("ship_light_8angles:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_k6csj"]
resource_name = "float"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ship_light_8angles:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(-0.715098, 2.14769e-14, 0.0144567), Vector3(-0.715098, -0.340981, 0.0144567), Vector3(-0.715098, 2.14769e-14, 0.0144567), Vector3(-0.715098, -0.340981, 0.0144567), Vector3(-0.715098, 2.14769e-14, 0.0144567), Vector3(-0.715098, -0.340981, 0.0144567), Vector3(-0.715098, 2.14769e-14, 0.0144567)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ship_light_8angles:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.766667, 2.26667, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.122173), Vector3(0, 0, -0.122173), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_msqns"]
_data = {
"RESET": SubResource("Animation_0loj4"),
"float": SubResource("Animation_k6csj")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_bqd6t"]
radius = 0.36

[node name="Enemy" groups=["enemy"] instance=ExtResource("1_w54a4")]
script = ExtResource("2_fuutl")

[node name="ship_light_8angles" parent="." index="0"]
transform = Transform3D(0.993914, -0.110159, 0, 0.110159, 0.993914, 0, 0, 0, 1, -0.715098, -0.209581, 0.0144567)

[node name="CollisionShape3D" type="CollisionShape3D" parent="." index="1"]
transform = Transform3D(4, 0, 0, 0, 0.203488, 3.99482, 0, -3.99482, 0.203488, -0.795291, 3.15065, -0.903409)
shape = SubResource("CapsuleShape3D_ymdiw")

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
libraries = {
"": SubResource("AnimationLibrary_msqns")
}
autoplay = "float"

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="." index="3"]

[node name="FaceDirection" type="Node3D" parent="." index="4"]

[node name="HitPlayerArea" type="Area3D" parent="." index="5"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, -0.372396)

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitPlayerArea" index="0"]
transform = Transform3D(2, 0, 0, 0, -8.74228e-08, -2, 0, 2, -8.74228e-08, -0.434859, 0.656636, -0.207852)
shape = SubResource("CapsuleShape3D_bqd6t")

[node name="ContactHitSound" type="AudioStreamPlayer3D" parent="." index="6"]
stream = ExtResource("3_4a8ps")

[connection signal="body_entered" from="HitPlayerArea" to="." method="_on_hit_player_area_body_entered"]
